--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -31,6 +31,14 @@
           borderColor: 'rgb(75, 192, 192)',
           tension: 0.1,
           spanGaps: true
+        },
+        {
+          label: 'Closes',
+          data: {{closes}},
+          fill: false,
+          borderColor: 'rgb(192, 75, 75)',
+          tension: 0.1,
+          spanGaps: true
         }]
       }
     });
