--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -44,7 +44,7 @@
       options: {
         plugins: {
           annotation: {
-            {{for buy_index in missed_buys}}
+            {%for buy_index in missed_buys%}
             annotations: {
               line1: {
                 type: 'line',
@@ -58,7 +58,7 @@
                   position: 'top'
                 }
               },
-              {{endfor}}
+              {%endfor%}
             }
           }
         }
