--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -59,6 +59,21 @@
                 }
               },
               {%endfor%}
+              {%for sell_index in missed_sells%}
+              annotations: {
+                line1: {
+                  type: 'line',
+                  xMin: {{sell_index}},  // Example date or index for vertical line
+                  xMax: {{sell_index}},
+                  borderColor: 'rgba(255, 99, 132, 0.75)',
+                  borderWidth: 2,
+                  label: {
+                    content: 'Missed Sell',
+                    enabled: true,
+                    position: 'top'
+                  }
+                },
+              {%endfor%}
             }
           }
         }
