--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -48,8 +48,8 @@
             annotations: {
               line1: {
                 type: 'line',
-                xMin: {{buy_index}},  // Example date or index for vertical line
-                xMax: {{buy_index}},
+                xMin: {{buy_index[0]}},  // Example date or index for vertical line
+                xMax: {{buy_index[0]}},
                 borderColor: 'rgba(255, 99, 132, 0.75)',
                 borderWidth: 2,
                 label: {
@@ -63,8 +63,8 @@
               annotations: {
                 line1: {
                   type: 'line',
-                  xMin: {{sell_index}},  // Example date or index for vertical line
-                  xMax: {{sell_index}},
+                  xMin: {{sell_index[0]}},  // Example date or index for vertical line
+                  xMax: {{sell_index[0]}},
                   borderColor: 'rgba(255, 99, 132, 0.75)',
                   borderWidth: 2,
                   label: {
@@ -80,6 +80,5 @@
       }
     });
 </script>
-  </script>
 
 {%- endif -%}
