--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -44,9 +44,9 @@
       options: {
         plugins: {
           annotation: {
-            annotations: {[
+            annotations: {
               {%for buy_index in missed_buys%}
-                {
+                {{buy_index}}: {
                   type: 'line',
                   xMin: {{buy_index}},  // Example date or index for vertical line
                   xMax: {{buy_index}},
@@ -60,7 +60,7 @@
                 },
                 {%endfor%}
                 {%for sell_index in missed_sells%}
-                  {
+                {{buy_index}}: {
                     type: 'line',
                     xMin: {{sell_index}},  // Example date or index for vertical line
                     xMax: {{sell_index}},
@@ -73,7 +73,7 @@
                     }
                   },
                 {%endfor%}
-            ]}
+            }
           }
         }
       }
