added missed buy marker

--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -21,7 +21,7 @@
 
 <script>
     const ctx = document.getElementById('myChart');
-  
+    Chart.register(Chart.Annotation);
     new Chart(ctx, {
       type: 'line',
       data: {
