--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -5,7 +5,7 @@
     <title>HTML 5 Boilerplate</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.1.0"></script> <!-- Make sure this plugin is included -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.2.0"></script> <!-- Updated plugin version -->
 
 </head>
 
@@ -21,7 +21,7 @@
 
 <script>
     const ctx = document.getElementById('myChart');
-    Chart.register(Chart.Annotation);
+    Chart.register(ChartAnnotation.Annotation);
     new Chart(ctx, {
       type: 'line',
       data: {
