--- a/RLTrader_Flask/templates/index.html
+++ b/RLTrader_Flask/templates/index.html
@@ -46,9 +46,8 @@
         plugins: {
           annotation: {
             annotations: {
-              {% with counter=1 %}
               {%for buy_index in missed_buys%}
-                line{{counter}}: {
+                line{{forloop.counter}}: {
                   type: 'line',
                   xMin: {{buy_index}},  // Example date or index for vertical line
                   xMax: {{buy_index}},
@@ -60,10 +59,9 @@
                     position: 'top'
                   }
                 },
-                {{counter|add:"1"}}
                 {%endfor%}
                 {%for sell_index in missed_sells%}
-                line{{counter}}: {
+                line{{forloop.counter|add:missed_buys|length }}: {
                     type: 'line',
                     xMin: {{sell_index}},  // Example date or index for vertical line
                     xMax: {{sell_index}},
@@ -75,9 +73,7 @@
                       position: 'top'
                     }
                   },
-                  {{counter|add:"1"}}
                 {%endfor%}
-                {%endwith%}
             }
           }
         }
